--- a/site-content/body.css
+++ b/site-content/body.css
@@ -17,10 +17,16 @@ h1 {
     align-items: center;
 }
 
-.head {
+.headliner {
     width: 90px;
     height: 90px;
-    margin-left: 80px;
+    margin-left: 20px;
+}
+
+.monkey-headliner {
+    width: 77px;
+    height: 118px;
+    margin-left: 20px;
 }
 
 .content-container {
@@ -30,7 +36,7 @@ h1 {
     gap: 20px;
 }
 
-.about-blob {
+.general-text {
     position: relative;
     font-family: 'Cardo', serif;
     font-size: 20px;
@@ -111,4 +117,6 @@ a {
 a:hover {
     color: #FF69B4;
 }
+
+
 
